--- a/hw4/app.css
+++ b/hw4/app.css
@@ -14,6 +14,8 @@ html {
  
 body {
   font-family: sans-serif;
+  font-size: 2rem;
+  background-color: bisque;
 }
 
 main {
@@ -25,20 +27,65 @@ main {
     justify-content: center;
 }
 
+#submit {
+  padding: 0.5rem;
+  background:#008cba;
+  color: white;
+  border: none;
+  cursor: pointer;
+}
+
+#submit:hover{
+  background:#15b0e4;
+}
+
 ul {
-    list-style-type: none;
+  list-style-type: none;
 }
 
 .todo-container {
-  display: flex;
-  flex-direction: column;
-  height: 50%;
-  width: 50%;
-  overflow: scroll;
-  overflow-x: hidden;
-  max-height: 800px;
+  width: 600px;
+  height: 800px;
+  padding: 4rem;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12),
+      0 1px 2px rgba(0, 0, 0, 0.24);
+  overflow-y: scroll;
+  background-color: rgb(255, 255, 255);
 }
 
-.todo-items{
+
+.todo-item{
+  display: flex;
+  margin-top: 2rem;
+}
+
+/* centers todo.title */
+.todo-content {
   margin: auto;
+
+}
+
+.editBtn, .deleteBtn {
+  color: white;
+  border: none;
+  margin: 0.5rem;
+  cursor: pointer;
+}
+
+.fa-trash {
+  background-color: #c94c4c;
+  padding: 1rem;
+}
+
+.fa-trash:hover{
+  background-color: #e35656;
+}
+
+.fa-pencil-square-o {
+  background-color: #008cba;
+  padding: 1rem;
+}
+ 
+.fa-pencil-square-o:hover {
+  background-color: #15b0e4
 }
